--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <title>Копировать текст</title>
+    <title>Быстреее!</title>
 </head>
 <body>
     <p></p>
@@ -16,3 +16,4 @@
 </body>
 
 </html>
+
