--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     <p></p>
-    <button onclick="copyText()">Копировать</button>
+    <button onclick="copyText()">Быстрее!</button>
 
     <script>
         function copyText() {
@@ -16,4 +16,5 @@
 </body>
 
 </html>
+
 
