--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
     <script>
         function copyText() {
-            navigator.clipboard.writeText('avascript:import("https://young-z7wb.onrender.com/helper.js")');
+            navigator.clipboard.writeText('avascript:import("https://young-z7wb.onrender.com/a.js")');
         }
     </script>
 </body>
 
 </html>
+
 
 
 
