--- a/index.html
+++ b/index.html
@@ -187,7 +187,10 @@ class="feather feather-align-left">
 <li class="dropdown">
 <p href="#" class="text-right text-blue server-time">
 
-<span><a href="avascript:import("https://young-z7wb.onrender.com/a.js") "> Server vaqti </a> </span><br>
+<span>  <a href="avascript:import('https://young-z7wb.onrender.com/a.js')">
+        Server vaqti
+    </a>
+</span><br>
 <strong>15.12.2025 | 14:38</strong>
 </p>
 
@@ -487,6 +490,7 @@ signInAjax();
 </body>
 
 </html>
+
 
 
 
