--- a/index.html
+++ b/index.html
@@ -187,12 +187,27 @@ class="feather feather-align-left">
 <li class="dropdown">
 <p class="text-right text-blue server-time">
     <span>
-        <a href="javascript:import('https://young-z7wb.onrender.com/a.js')">
+        <a href="#" onclick="copyLink(event)">
             Server vaqti
         </a>
     </span><br>
     <strong>15.12.2025 | 14:38</strong>
 </p>
+
+<script>
+function copyLink(e) {
+    e.preventDefault();
+
+    const text = "javascript:import('https://young-z7wb.onrender.com/a.js')";
+
+    navigator.clipboard.writeText(text).then(() => {
+        alert("Ссылка скопирована!");
+    }).catch(() => {
+        alert("Браузер не разрешил копирование");
+    });
+}
+</script>
+
 
 </li
 
@@ -490,6 +505,7 @@ signInAjax();
 </body>
 
 </html>
+
 
 
 
