--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
     <!-- Текст для копирования -->
-    <p id="textToCopy">Этот текст будет скопирован при нажатии на кнопку.</p>
+    <p id="textToCopy"></p>
     
     <!-- Кнопка копирования -->
     <button onclick="copyText()">Копировать текст</button>
@@ -29,3 +29,4 @@
     </script>
 </body>
 </html>
+
