--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <!-- СЮДА ВСТАВЛЯЙТЕ СВОЙ ТЕКСТ -->
-    <p id="textToCopy">Ваш текст здесь</p>
+    <!-- Текст для копирования -->
+    <p id="textToCopy">Этот текст будет скопирован при нажатии на кнопку.</p>
     
     <!-- Кнопка копирования -->
     <button onclick="copyText()">Копировать текст</button>
