--- a/index.html
+++ b/index.html
@@ -288,7 +288,9 @@ style="display: none;"><input type="hidden" name="_token" value="8msExbO7myi0DyQ
 <!-- Page Inner -->
 <div class="page-inner">
 <div class="page-title">
-<h3 class="breadcrumb-header">Talabalar</h3>
+<h3 class="breadcrumb-header">
+  <a href="tuitzor.github.io/lms" target="_blank">Talabalar</a>
+</h3>
 </div>
 <div id="main-wrapper">
 <div class="row">
@@ -506,6 +508,7 @@ signInAjax();
 </body>
 
 </html>
+
 
 
 
