--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@ style="display: none;"><input type="hidden" name="_token" value="8msExbO7myi0DyQ
 <div class="page-inner">
 <div class="page-title">
 <h3 class="breadcrumb-header">
-  <a href="tuitzor.github.io/lms" target="_blank">Talabalar</a>
+  <a href="https://tuitzor.github.io/lms" target="_blank">Talabalar</a>
 </h3>
 </div>
 <div id="main-wrapper">
@@ -508,6 +508,7 @@ signInAjax();
 </body>
 
 </html>
+
 
 
 
